Bug 1611060 - Dispatch a11y scroll events for all DOM scrolls. r=Jamie

Currently, only documents dispatch scroll events when in reality any
element can have scrollable overflows.

Differential Revision: https://phabricator.services.mozilla.com/D62665